src/test/ui/rfcs/rfc-2093-infer-outlives/reference.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
struct Foo<'a, T> { //~ ERROR rustc_outlives
    bar: &'a T,
}

fn main() {}
